nginxのssl接続時のプロキシ先を修正

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -39,7 +39,7 @@ server {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
   location / {
-    proxy_pass http://uryolog:3000;
+    proxy_pass http://uryolog-wp;
   }
 
   error_page 500 502 503 504 /50x.html;
