composeのネットワーク設定を修正

--- a/compose.yml
+++ b/compose.yml
@@ -27,5 +27,6 @@ services:
       - ./letsencrypt/log:/var/log/letsencrypt
 
 networks:
-  default:
-    name: proxy-network
+  proxy-network:
+  uryolog-network:
+    external: true
