dockerのネットワーク設定を修正

--- a/compose.yml
+++ b/compose.yml
@@ -27,6 +27,5 @@ services:
       - ./letsencrypt/log:/var/log/letsencrypt
 
 networks:
-  proxy-network:
-  uryolog-network:
-    external: true
+  default:
+    name: proxy-network
