nginx設定のtypoを修正

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -10,7 +10,7 @@ server {
 
   # httpsにリダイレクトする
   location / {
-    return 301 https://$host$request_url;
+    return 301 https://$host$request_uri;
   }
 }
 
