--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -19,6 +19,9 @@ server {
   listen [::]:443 ssl http2;
   server_name blog.uryonym.com;
 
+  # postサイズ制限緩和
+  client_max_body_size 20M;
+
   ssl_certificate /etc/letsencrypt/live/blog.uryonym.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/blog.uryonym.com/privkey.pem;
   ssl_session_timeout 1d;
