portalとapi-portal用の設定を追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-/nginx/html/*
-!/nginx/html/.keep
+/nginx/html/blog/*
+!/nginx/html/blog/.keep
+/nginx/html/portal/*
+!/nginx/html/portal/.keep
+/nginx/html/api-portal/*
+!/nginx/html/api-portal/.keep
 /nginx/log/*
 !/nginx/log/.keep
 /letsencrypt/cert/*
