--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,13 @@
+server {
+  listen 80 default_server;
+  listen [::]:80;
+  server_name _;
+  return 444;
+}
+
 ## blog.uryonym.com
 server {
-  listen 80 default;
+  listen 80;
   listen [::]:80;
   server_name blog.uryonym.com;
 
@@ -54,7 +61,7 @@ server {
 
 ## portal.uryonym.com
 server {
-  listen 80 default;
+  listen 80;
   listen [::]:80;
   server_name portal.uryonym.com;
   root /usr/share/nginx/html/portal;
@@ -109,7 +116,7 @@ server {
 
 ## api-portal.uryonym.com
 server {
-  listen 80 default;
+  listen 80;
   listen [::]:80;
   server_name api-portal.uryonym.com;
   root /usr/share/nginx/html/api-portal;
